VCSample/include/PortSIPLib/PortSIPLib.hxx



	int  PortSIP_getNICNums();

	int  PortSIP_getLocalIpAddress(int index, char * ip, int ipSize);


	void PortSIP_delCallbackParameters(void * parameters);


	void * PortSIP_initialize(AbstractCallbackDispatcher * callbackDispatcher,
		TRANSPORT_TYPE transport,
		const char * localIp,
		int localSIPPort,
		PORTSIP_LOG_LEVEL logLevel,
		const char * logFilePath,
		int maxCallSessions,
		const char * sipAgentString,
		int audioDeviceLayer,
		int videoDeviceLayer,
		const char * TLSCertificatesRootPath,
		const char * TLSCipherList,
		bool verifyTLSCertificate,
		int * errorCode);



	int PortSIP_setInstanceId(void * libSDK, const char * instanceId);


	void PortSIP_unInitialize(void * libSDK);


	int PortSIP_getVersion(void * libSDK, int * majorVersion, int * minorVersion);


	int PortSIP_setLicenseKey(void * libSDK, const char * key);

	int PortSIP_setUser(void * libSDK,
		const char * userName,
		const char * displayName,
		const char * authName,
		const char * password,
		const char * sipDomain,
		const char * sipServerAddr,
		int sipServerPort,
		const char * stunServerAddr,
		int stunServerPort,
		const char * outboundServerAddr,
		int outboundServerPort);


	void PortSIP_removeUser(void * libSDK);

	int PortSIP_setDisplayName(void * libSDK, const char * displayName);


	int PortSIP_setInstanceId(void * libSDK, const char * uuid);


	int PortSIP_registerServer(void * libSDK, int regExpires, int retryTimes);

	int PortSIP_refreshRegistration(void * libSDK, int regExpires);

	int PortSIP_unRegisterServer(void * libSDK);


	int PortSIP_enableRport(void * libSDK, bool enable);

	int PortSIP_enableEarlyMedia(void * libSDK, bool enable);

	int PortSIP_enableReliableProvisional(void * libSDK, bool enable);

	int PortSIP_enable3GppTags(void * libSDK, bool enable);

	void PortSIP_enableCallbackSignaling(void * libSDK, bool enableSending, bool enableReceived);

	int PortSIP_setRtpCallback(void * libSDK, void * obj, fnReceivedRTPPacket receivedCallback, fnSendingRTPPacket sendingCallback);


	int PortSIP_addAudioCodec(void * libSDK, AUDIOCODEC_TYPE codecType);

	int PortSIP_addVideoCodec(void * libSDK, VIDEOCODEC_TYPE codecType);

	bool PortSIP_isAudioCodecEmpty(void * libSDK);

	bool PortSIP_isVideoCodecEmpty(void * libSDK);

	int PortSIP_setAudioCodecPayloadType(void * libSDK, AUDIOCODEC_TYPE codecType, int payloadType);

	int PortSIP_setVideoCodecPayloadType(void * libSDK, VIDEOCODEC_TYPE codecType, int payloadType);