CSharpSample_DLL/PortSIP/PortSIPNativeMethods.cs


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PSCallback_setRecvInfoHandler(IntPtr callbackDispatcher,
                                                                        recvInfo eventHandler,
                                                                        Int32 callbackIndex,
                                                                        Int32 callbackObject);



        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PSCallback_setPlayAudioFileFinishedHandler(IntPtr callbackDispatcher,
                                                                        playAudioFileFinished eventHandler,
                                                                        Int32 callbackIndex,
                                                                        Int32 callbackObject);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PSCallback_setPlayVideoFileFinishedHandler(IntPtr callbackDispatcher,
                                                                        playVideoFileFinished eventHandler,
                                                                        Int32 callbackIndex,
                                                                        Int32 callbackObject);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PSCallback_setRecvMessageHandler(IntPtr callbackDispatcher,
                                                                        recvMessage eventHandler,
                                                                        Int32 callbackIndex,
                                                                        Int32 callbackObject);



        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PSCallback_setRecvOutOfDialogMessageHandler(IntPtr callbackDispatcher,
                                                                        recvOutOfDialogMessage eventHandler,
                                                                        Int32 callbackIndex,
                                                                        Int32 callbackObject);



        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PSCallback_setSendMessageSuccessHandler(IntPtr callbackDispatcher,
                                                                        sendMessageSuccess eventHandler,
                                                                        Int32 callbackIndex,
                                                                        Int32 callbackObject);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PSCallback_setSendMessageFailureHandler(IntPtr callbackDispatcher,
                                                                        sendMessageFailure eventHandler,
                                                                        Int32 callbackIndex,
                                                                        Int32 callbackObject);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PSCallback_setSendOutOfDialogMessageSuccessHandler(IntPtr callbackDispatcher,
                                                                        sendOutOfDialogMessageSuccess eventHandler,
                                                                        Int32 callbackIndex,
                                                                        Int32 callbackObject);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PSCallback_setSendOutOfDialogMessageFailureHandler(IntPtr callbackDispatcher,
                                                                        sendOutOfDialogMessageFailure eventHandler,
                                                                        Int32 callbackIndex,
                                                                        Int32 callbackObject);


        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////// 
        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////// 

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PortSIP_delCallbackParameters(IntPtr parameters);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern IntPtr PortSIP_initialize(IntPtr callbackDispatcher,
                                                   TRANSPORT_TYPE transportType,
                                                   String localIp,
                                                   Int32 localSIPPort,
                                                   Int32 logLevel,
                                                   String logFilePath,
                                                   Int32 maxCallSessions,
                                                   String sipAgentString,
                                                   Int32 audioDeviceLayer,
                                                   Int32 videoDeviceLayer,
                                                   String TLSCertificatesRootPath,
                                                   String TLSCipherList,
                                                   Boolean verifyTLSCertificate,
                                                   out Int32 errorCode);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PortSIP_unInitialize(IntPtr libSDK);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setLicenseKey(IntPtr libSDK, String key);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_getNICNums();

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_getLocalIpAddress(Int32 index, StringBuilder ip, Int32 ipSize);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setUser(IntPtr libSDK,
                                                   String userName,
                                                   String displayName,
                                                   String authName,
                                                   String password,
                                                   String sipDomain,
                                                   String sipServerAddr,
                                                   Int32 sipServerPort,
                                                   String stunServerAddr,
                                                   Int32 stunServerPort,
                                                   String outboundServerAddr,
                                                   Int32 outboundServerPort);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PortSIP_removeUser(IntPtr libSDK);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern int PortSIP_setInstanceId(IntPtr libSDK, String uuid);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern int PortSIP_setDisplayName(IntPtr libSDK, String displayName);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_refreshRegistration(IntPtr libSDK, Int32 regExpires);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_registerServer(IntPtr libSDK, Int32 regExpires, Int32 retryTimes);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_unRegisterServer(IntPtr libSDK);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_getVersion(IntPtr libSDK, out Int32 majorVersion, out Int32 minorVersion);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_enableRport(IntPtr libSDK, [MarshalAs(UnmanagedType.I1)] Boolean enable);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_enableEarlyMedia(IntPtr libSDK, [MarshalAs(UnmanagedType.I1)] Boolean enable);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_enableReliableProvisional(IntPtr libSDK, [MarshalAs(UnmanagedType.I1)] Boolean enable);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_enable3GppTags(IntPtr libSDK, [MarshalAs(UnmanagedType.I1)] Boolean enable);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern void PortSIP_enableCallbackSignaling(IntPtr libSDK, [MarshalAs(UnmanagedType.I1)] Boolean enableSending, [MarshalAs(UnmanagedType.I1)] Boolean enableReceived);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setRtpCallback(IntPtr libSDK,
                                                                IntPtr callbackObj,
                                                                receivedRTPCallback receivedRTPCallbackHandler,
                                                                sendingRTPCallback sendingRTPCallbackHandler);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_addAudioCodec(IntPtr libSDK, Int32 codecType);


        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_addVideoCodec(IntPtr libSDK, Int32 codecType);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static unsafe extern Boolean PortSIP_isAudioCodecEmpty(IntPtr libSDK);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        [return: MarshalAs(UnmanagedType.I1)]
        public static unsafe extern Boolean PortSIP_isVideoCodecEmpty(IntPtr libSDK);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setAudioCodecPayloadType(IntPtr libSDK, Int32 codecType, Int32 payloadType);

        [DllImport("portsip_sdk.dll", CallingConvention = CallingConvention.Cdecl)]
        public static unsafe extern Int32 PortSIP_setVideoCodecPayloadType(IntPtr libSDK, Int32 codecType, Int32 payloadType);
